Add node_module in demo into .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ ng2-fundamentals/node_modules
 ./RxJSDemo/node_modules
 tools/
 Oceanalytics/Confluent Kafka REST Proxy/javascript/node_modules/
+Oceanalytics/Demo/node_modules
