Update test script to compile typescript before running test

--- a/typescript-fundamental/package.json
+++ b/typescript-fundamental/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "jasmine"
+    "compile": "tsc -p .",
+    "test": "npm run compile && jasmine"
   },
   "author": "",
   "license": "ISC"
