use pre prefix for running compilation before test

--- a/typescript-fundamental/package.json
+++ b/typescript-fundamental/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {},
   "scripts": {
     "compile": "tsc -p .",
-    "test": "npm run compile && jasmine"
+    "pretest": "npm run compile",
+    "test": "jasmine"
   },
   "author": "",
   "license": "ISC"
