--- a/typescript-fundamental/package.json
+++ b/typescript-fundamental/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@types/chalk": "^0.4.31",
     "@types/jasmine": "^2.5.47",
+    "@types/node": "^7.0.14",
     "axios": "^0.16.1",
+    "chalk": "^1.1.3",
     "jasmine": "^2.6.0",
+    "json-schema-faker": "^0.5.0-rc1",
     "tslint": "^5.1.0",
-    "typescript": "^2.3.1"
+    "typescript": "^2.3.2"
   },
   "devDependencies": {},
   "scripts": {
     "compile": "tsc -p .",
-    "pretest": "npm run compile",
-    "test": "jasmine"
+    "compile:watch": "tsc --watch -p .",
+    "test": "jasmine",
+    "generate-mock-data": "node ./src/json-schema/GenerateMockData.js"
   },
   "author": "",
   "license": "ISC"
