Ignore node_modules in typescript-fundamental folder

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ ng2-fundamentals/node_modules
 tools/
 Oceanalytics/Confluent Kafka REST Proxy/javascript/node_modules/
 Oceanalytics/Demo/node_modules
+typescript-fundamental/node_modules
