Ignore debug.log file

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ tools/
 Oceanalytics/Confluent Kafka REST Proxy/javascript/node_modules/
 Oceanalytics/Demo/node_modules
 typescript-fundamental/node_modules
+typescript-fundamental/debug.log
