--- a/typescript-fundamental/package.json
+++ b/typescript-fundamental/package.json
@@ -9,8 +9,10 @@
     "@types/node": "^7.0.14",
     "axios": "^0.16.1",
     "chalk": "^1.1.3",
+    "faker": "^4.1.0",
     "jasmine": "^2.6.0",
     "json-schema-faker": "^0.5.0-rc1",
+    "json-server": "^0.10.0",
     "tslint": "^5.1.0",
     "typescript": "^2.3.2"
   },
@@ -19,7 +21,8 @@
     "compile": "tsc -p .",
     "compile:watch": "tsc --watch -p .",
     "test": "jasmine",
-    "generate-mock-data": "node ./src/json-schema/GenerateMockData.js"
+    "generate-mock-data": "node ./src/json-schema/GenerateMockData.js",
+    "start-mockapi": "json-server --watch src/api/db.json --port 3001"
   },
   "author": "",
   "license": "ISC"
