Add .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ typescript-fundamental/src/**/*.js.map
 typescript-fundamental/src/**/*.js
 typescript-fundamental/spec/**/*.js
 typescript-fundamental/spec/**/*.js.map
+Oceanalytics/Confluent Kafka REST Proxy/Sample/debug.log
