--- a/typescript-fundamental/package.json
+++ b/typescript-fundamental/package.json
@@ -14,6 +14,7 @@
     "jasmine": "^2.6.0",
     "json-schema-faker": "^0.5.0-rc1",
     "json-server": "^0.10.0",
+    "rxjs": "^5.3.1",
     "tslint": "^5.1.0",
     "typescript": "^2.3.2"
   },
