--- a/Oceanalytics/Demo-angular2/package.json
+++ b/Oceanalytics/Demo-angular2/package.json
@@ -20,7 +20,11 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-select": "^1.0.0-beta.3",
     "core-js": "^2.4.1",
+    "ng-select": "^1.0.0-beta.5",
+    "ng2-select": "^1.2.0",
+    "ng2-select2": "^1.0.0-beta.10",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
