--- a/Oceanalytics/Demo-angular2/package.json
+++ b/Oceanalytics/Demo-angular2/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^4.0.0",
     "angular2-select": "^1.0.0-beta.3",
     "core-js": "^2.4.1",
+    "json-schema-faker": "^0.5.0-rc3",
     "ng-select": "^1.0.0-beta.5",
     "ng2-select": "^1.2.0",
     "ng2-select2": "^1.0.0-beta.10",
@@ -29,7 +30,7 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
+    "@angular/cli": "^1.0.3",
     "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
@@ -39,9 +40,9 @@
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
