--- a/typescript-fundamental/package.json
+++ b/typescript-fundamental/package.json
@@ -25,7 +25,7 @@
     "compile": "tsc -p .",
     "compile:watch": "tsc --watch -p .",
     "test": "jasmine",
-    "test:watch": "nodemon -x npm run test",
+    "test:watch": "nodemon -q -x npm run test",
     "generate-mock-data": "node ./src/json-schema/GenerateMockData.js",
     "start-mockapi": "json-server src/api/db.json --port 3001",
     "start-mockapi-middleware": "json-server src/api/db.json --middlewares src/server/middlewares/delayMiddleware.js --port 3001"
