--- a/reporting-widgets/package.json
+++ b/reporting-widgets/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angular-gridster2": "^3.11.6",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
